--- a/templates/results.ejs
+++ b/templates/results.ejs
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <html>
 
+<div style="margin-bottom: 15px; color: #666; font-size: 14px;">
+    Data Source: <%= source %>
+</div>
+
 <head>
     <title>Route Information</title>
     <style>
