Added functionality where you cannot see/select a station that is already selected in the source or destination. This means that users cannot accidently or intentationally select a route from the same source and destination station, eliminating the primary error given in the app. This also makes it slightly easier to choose a route now. Also added/cleaned up readme final for submission. TODO: Imirie add directory ID and make youtube video

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -138,6 +138,54 @@
                 </div>
                 <button type="submit">Get Route Information</button>
             </form>
+
+            <script>
+                const fromStation = document.getElementById('fromStation');
+                const toStation = document.getElementById('toStation');
+
+                function updateDestinations() {
+                    const selectedSource = fromStation.value;
+                    const currentDest = toStation.value;
+                    const keepCurrentSelection = currentDest && currentDest !== selectedSource;
+
+                    toStation.innerHTML = '';
+
+                    <% stations.forEach(station => { %>
+                        if ('<%= station %>' !== selectedSource) {
+                            const option = new Option('<%= station %>', '<%= station %>');
+                            toStation.add(option);
+                        }
+                    <% }); %>
+
+                    if (keepCurrentSelection && toStation.querySelector(`option[value="${currentDest}"]`)) {
+                        toStation.value = currentDest;
+                    }
+                }
+
+                function updateSources() {
+                    const selectedDest = toStation.value;
+                    const currentSource = fromStation.value;
+                    const keepCurrentSelection = currentSource && currentSource !== selectedDest;
+
+                    fromStation.innerHTML = '';
+
+                    <% stations.forEach(station => { %>
+                        if ('<%= station %>' !== selectedDest) {
+                            const option = new Option('<%= station %>', '<%= station %>');
+                            fromStation.add(option);
+                        }
+                    <% }); %>
+
+                    if (keepCurrentSelection && fromStation.querySelector(`option[value="${currentSource}"]`)) {
+                        fromStation.value = currentSource;
+                    }
+                }
+
+                fromStation.addEventListener('change', updateDestinations);
+                toStation.addEventListener('change', updateSources);
+
+                updateDestinations();
+            </script>
             <% } else { %>
                 <form action="/getCollegeParkRoute" method="POST">
                     <div class="form-group">
