--- a/templates/results.ejs
+++ b/templates/results.ejs
@@ -1,4 +1,3 @@
-<!-- templates/results.ejs -->
 <!DOCTYPE html>
 <html>
 
@@ -44,7 +43,7 @@
         }
 
         .back-button {
-            background-color: #6c757d;
+            background-color: #007bff;
             color: white;
             padding: 12px 24px;
             border: none;
@@ -52,10 +51,13 @@
             text-decoration: none;
             display: inline-block;
             margin-top: 20px;
+            text-align: center;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .back-button:hover {
-            background-color: #5a6268;
+            background-color: #0056b3;
         }
 
         .info-item {
@@ -102,7 +104,11 @@
                 </div>
             </div>
         </div>
-        <a href="/" class="back-button">New Search</a>
+        <% if (currentPage==="general" ) { %>
+            <a href="/" class="back-button">Back to General Route Planner</a>
+            <% } else { %>
+                <a href="/college-park" class="back-button">Back to College Park Routes</a>
+                <% } %>
     </div>
 </body>
 
