--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -136,6 +136,14 @@
                             <% }); %>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="fare">Fare Rate:</label>
+                    <select name="fare" id="fare" required>
+                        <option value="peak">Peak Time, Weekdays 5am-9:30pm</option>
+                        <option value="offPeak">Off-Peak Time, Weekdays after 9:30pm, Weekends</option>
+                        <option value="senior">Seniors 65+ and Persons with Disabilities</option>
+                    </select>
+                </div>
                 <button type="submit">Get Route Information</button>
             </form>
 
@@ -155,7 +163,7 @@
                             const option = new Option('<%= station %>', '<%= station %>');
                             toStation.add(option);
                         }
-                    <% }); %>
+                     <%}); %>
 
                     if (keepCurrentSelection && toStation.querySelector(`option[value="${currentDest}"]`)) {
                         toStation.value = currentDest;
@@ -169,7 +177,7 @@
 
                     fromStation.innerHTML = '';
 
-                    <% stations.forEach(station => { %>
+                    <%stations.forEach(station => { %>
                         if ('<%= station %>' !== selectedDest) {
                             const option = new Option('<%= station %>', '<%= station %>');
                             fromStation.add(option);
@@ -200,6 +208,14 @@
                                     <%= station %>
                                 </option>
                                 <% }); %>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="fare">Fare Rate:</label>
+                        <select name="fare" id="fare" required>
+                            <option value="peak">Peak Time, Weekdays 5am-9:30pm</option>
+                            <option value="offPeak">Off-Peak Time, Weekdays after 9:30pm, Weekends</option>
+                            <option value="senior">Seniors 65+ and Persons with Disabilities</option>
                         </select>
                     </div>
                     <button type="submit">Get Route Information</button>
