Added option to form

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -144,6 +144,7 @@
                 <div class="form-group">
                     <label for="fare">Fare Rate:</label>
                     <select name="fare" id="fare" required>
+                        <option value="all">List All Fares</option>
                         <option value="peak">Peak Time, Weekdays 5am-9:30pm</option>
                         <option value="offPeak">Off-Peak Time, Weekdays after 9:30pm, Weekends</option>
                         <option value="senior">Seniors 65+ and Persons with Disabilities</option>
@@ -218,6 +219,7 @@
                     <div class="form-group">
                         <label for="fare">Fare Rate:</label>
                         <select name="fare" id="fare" required>
+                            <option value="all">List All Fares</option>
                             <option value="peak">Peak Time, Weekdays 5am-9:30pm</option>
                             <option value="offPeak">Off-Peak Time, Weekdays after 9:30pm, Weekends</option>
                             <option value="senior">Seniors 65+ and Persons with Disabilities</option>
